--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -30,9 +30,11 @@
                   - else
                     %span.label.label-important Incorrect
     - unless @challenge_tasks.empty?
-      %div#questions_tab.tab_content{ style: "display: none;" }
-        %div{style:"display: none; background-color:#A04545; width:600px; height:80px; color:#C5C5C5; margin-left: auto; margin-right: auto; color: #C5C5C5; text-align: center; margin-bottom: 12px;"}
-          %span *Lightbulb* Remember, CR's and tasks are there to guide your improvement. Go ahead, look up answers!
+      %div#questions_tab.tab_content{ style: "" }
+        %div{style:"background-color:#4FB64F; width:600px; height:80px; margin-left: auto; margin-right: auto; padding:4px 10px 10px 10px; text-align: left; margin-bottom: 12px;"}
+          %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "display:inline; bottom:6px; height:30px;"}
+          %h3{style: "font-size:24px; display:inline;"} Go ahead, look up answers!
+          %h5{style: "font-size:15px;"} CR's and Tasks are here to guide your improvement. If you don't know an answer, go figure it out and share what you learned with the rest of us!
         %table
           - @challenge_tasks.each do |t|
             %tr
