cosmetics modded on launchpad googling message and new user giant box

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -5,8 +5,7 @@
       %h1{style:"display:inline; position:relative; top:12px;"} Looks like you're new here...
     %div{style:"margin-left:20px; margin-top:-10px;"}
       %h4{style:""} MetaBright is a place to showcase your skills and get better at the stuff you're passionate about.
-      %h4{style:"margin-top:15px;"} Poke around a little bit. When you're ready to take the Challenge yourself, come back here to sign up. It only takes five seconds. We promise.
-  
+      %h4{style:"margin-top:15px;"} Poke around a little bit. When you're ready to take the Challenge yourself, come back here to <a class="login_link" style="cursor:pointer;">sign up</a>. It only takes five seconds. Honest!
   %div#topsection
     %div#updatespace
       %div{ style: "display:inline;" }
