--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -47,9 +47,8 @@ code,pre{font:inherit;}
 .singleprogressentry:last-child{ padding-bottom:10px; }
 .singleprogressentry:first-child{padding-top:6px;}
 .singleprogressentry>img{ height:50px; width:50px; display:inline-block; border-radius:3px;}
-.personaprogress{ display:inline-block; position:relative; top:5px; margin-left:5px;}
-.progresscontainer{ height:10px; background-color:#dfdfdf; overflow:hidden; border-radius:6px;}
-.progressbar{ height:10px; background-color:#5fb052; border-radius:6px; }
+.personaprogress{ display:inline-block; position:relative; top:5px; margin-left:5px; width:74%;}
+.personaprogress .progress{height:10px;}
 
 /* Other stuff - organize by feature */
 #topsection{margin: 0; border: 1px solid rgba(0, 0, 0, .1);border-radius: 6px;position:relative;background-clip: padding-box; color:#333; background-color:white; margin-bottom:10px;}
