fixed header issues in arena as a result of bootstrap and got rid of old copy on CR answer flow

--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -34,7 +34,7 @@
         });
       });
     %div.quizheader
-      = image_tag @section.path.path_pic, size: "50x50"
+      = image_tag @section.path.path_pic, style: "height:50px; width:50px;"
       %div{ style: "display:inline-block;" }
         %span <strong>#{@section.path.name}:</strong> #{@section.name}</span>
         %div#idprogressbar
