--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -34,9 +34,9 @@
         });
       });
     %div.quizheader
-      = image_tag @section.path.path_pic, size: "50x50"
+      = image_tag @path.path_pic, style: "width: 50px; height: 50px;"
       %div{ style: "display:inline-block;" }
-        %span <strong>#{@section.path.name}:</strong> #{@section.name}</span>
+        %span <strong>#{@path.name}:</strong> #{@section.name}</span>
         %div#idprogressbar
     %div{ style: "text-align:center;" }
       = render "stored_resource", { :stored_resource => @stored_resource }
