--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -31,10 +31,10 @@
             - if current_user == r.user
               %div.dropdown.submission-icon{ style: "padding-top:0px; margin: 0px;" }
                 %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", style: "padding:0px;" }
-                  %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/gear.png", style: "height:20px; width:20px;", title:"Settings"}
-                %ul.dropdown-menu{ role: "button", style: "margin: 0; padding: 0; top:32px; left: -55px; min-width: 140px;" }
+                  %span.caret{ style: "margin: 6px 0 0 0;" }
+                %ul.dropdown-menu{ role: "button", style: "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;" }
                   %li{ style: "margin-left: -10px;" }
-                    %div.nub{ style: "left: 63px; top: -17px; margin: 0;"}
+                    %div.graynub{ style: "top:-17px; left: 75px; margin:0; "}
                     %div{ style: "padding: 3px 0px; margin:0;"}
                       %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
                         %li= link_to "Delete Submission", retract_submission_path(r.id), remote: true, confirm: "Are you sure you want to delete your submission?", style: "padding: 0; color: inherit; text-shadow: none;", class: "retract_link"
@@ -47,7 +47,7 @@
               %div.vote_count= r.submitted_answer.total_votes.to_i
       %div.posttext.leveltext.dropdown
         %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", role: "button", style: "color:inherit; cursor:default;" } #{r.task.question}
-        %ul.dropdown-menu{ role: "menu", style: "left:99.5%; top:-70%; display:none;"}
+        %ul.dropdown-menu{ role: "menu", style: "left:99.5%; top:-70%; "}
           %li
             %div
               %div.sidenub
