modified auto-pop ups

--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -1,5 +1,5 @@
 :css
-  div.dropdown:hover ul.dropdown-menu{display: block;}
+  div.posttext.leveltext.dropdown:hover ul.dropdown-menu{display: block;}
   a.menu:after, .dropdown-toggle:after {content: none;}
 
 - if newsfeed_items.empty?
