--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -11,6 +11,7 @@
   }
 :css
   .profile_dropdown li:hover { color: white; }
+  .navbar{ z-index:1001; }
   
 %nav.navbar.navbar-fixed-top
   %div.fill.navbar-inner
