--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -56,7 +56,7 @@
                   %div.leftboxfooter{style:"padding:0; background-color:white;"}
                     %div.singleprogressentry
                       %img{ src: "http://www.placekitten.com/50/50"}              
-                      %div.personaprogress
+                      %div.challengeprogress
                         %span{ style: "font-size:18px;"} Challenge Name 
                         %span{style: "font-size:14px; float:right; "}Level 4
                         %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} 300 more points to level up!
@@ -65,7 +65,7 @@
                             -# = The width of this div should be dynamically changed based on the user's progress in current level.
                     %div.singleprogressentry
                       %img{ src: "http://www.placekitten.com/50/50"}              
-                      %div.personaprogress
+                      %div.challengeprogress
                         %span{ style: "font-size:18px;"} Challenge Name 
                         %span{style: "font-size:14px; float:right; "}Level 4
                         %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} 300 more points to level up!
@@ -74,7 +74,7 @@
                             -# = The width of this div should be dynamically changed based on the user's progress in current level.
                     %div.singleprogressentry
                       %img{ src: "http://www.placekitten.com/50/50"}              
-                      %div.personaprogress
+                      %div.challengeprogress
                         %span{ style: "font-size:18px;"} Challenge Name 
                         %span{style: "font-size:14px; float:right; "}Level 4
                         %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} 300 more points to level up!
