--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -57,43 +57,36 @@
               %li Company: #{@user.company_name}  
             - unless @user.title.blank?
               %li Title: #{@user.title}
-      %div.leftbox{ style: "display: none;" }
+      %div.leftbox{ style: "" }
         %div.leftboxheader Progress
         %div.leftboxfooter{style:"padding-top: 6px"}
-          %div.singleprogressentry
-            %img{ src: "http://www.placekitten.com/50/50"}              
+          %div
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Persona+Icons/Icon_Explorer_130.PNG", style:"width:50px; height:50px;"}              
             %div.personaprogress
-              %span{ style: "font-size:20px;display:block; margin-bottom:3px;"} Hacker - Level 4
-              %span{ style: "position:relative; bottom:2px;"} 300 points to go!
-              %div.progresscontainer
-                %div.progressbar{ style: "width:150px;"}
-          %div.singleprogressentry
-            %div.personaimage{ style: "display:inline-block;"}
-              %img{ src: "http://www.placekitten.com/50/50", style:"height:50px; width:50px;"}
-            %div.rightstuffprogress{ style: "display:inline-block; position:relative; top:5px; margin-left:5px;"}
-              %span.personaname{ style: "font-size:20px;display:"} Hacker
-              %br
-              %span.personasubtext{style: "position:relative; bottom:2px;"} Level 4
-              %div.progresscontainer{ style: "height:10px; width:200px; background-color:#dfdfdf; overflow:hidden; border-radius:6px;"}
-                %div.progressbar{ style: "height:10px; width:150px; background-color:#5fb052; border-radius:6px;"}
-          %div.singleprogressentry
-            %div.personaimage{ style: "display:inline-block;"}
-              %img{ src: "http://www.placekitten.com/50/50", style:"height:50px; width:50px;"}
-            %div.rightstuffprogress{ style: "display:inline-block; position:relative; top:5px; margin-left:5px;"}
-              %span.personaname{ style: "font-size:20px;display:"} Hacker
-              %br
-              %span.personasubtext{style: "position:relative; bottom:2px;"} Level 4
-              %div.progresscontainer{ style: "height:10px; width:200px; background-color:#dfdfdf; overflow:hidden; border-radius:6px;"}
-                %div.progressbar{ style: "height:10px; width:150px; background-color:#5fb052; border-radius:6px;"}
-          %div.singleprogressentry
-            %div.personaimage{ style: "display:inline-block;"}
-              %img{ src: "http://www.placekitten.com/50/50", style:"height:50px; width:50px;"}
-            %div.rightstuffprogress{ style: "display:inline-block; position:relative; top:5px; margin-left:5px;"}
-              %span.personaname{ style: "font-size:20px;display:"} Hacker
-              %br
-              %span.personasubtext{style: "position:relative; bottom:2px;"} Level 4
-              %div.progresscontainer{ style: "height:10px; width:200px; background-color:#dfdfdf; overflow:hidden; border-radius:6px;"}
-                %div.progressbar{ style: "height:10px; width:150px; background-color:#5fb052; border-radius:6px;"}         
+              %span{ style: "font-size:18px;"} Persona Name 
+              %span{style: "font-size:14px; float:right; "}Level 4
+              %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} 300 more points to level up!
+              %div.progress.progress-info
+                %div.bar{ style: "width:30%;"} 
+                  -# = The width of this div should be dynamically changed based on the user's progress in current level. 
+          %div
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Persona+Icons/Icon_Explorer_130.PNG", style:"width:50px; height:50px;"}              
+            %div.personaprogress
+              %span{ style: "font-size:18px;"} Persona Name 
+              %span{style: "font-size:14px; float:right; "}Level 4
+              %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} 300 more points to level up!
+              %div.progress.progress-info
+                %div.bar{ style: "width:30%;"} 
+                  -# = The width of this div should be dynamically changed based on the user's progress in current level. 
+          %div
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Persona+Icons/Icon_Explorer_130.PNG", style:"width:50px; height:50px;"}              
+            %div.personaprogress
+              %span{ style: "font-size:18px;"} Persona Name 
+              %span{style: "font-size:14px; float:right; "}Level 4
+              %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} 300 more points to level up!
+              %div.progress.progress-info
+                %div.bar{ style: "width:30%;"} 
+                  -# = The width of this div should be dynamically changed based on the user's progress in current level. 
     %div.span11
       %div.newsfeed{ style: "min-height: 285px;" }
         %div.leftboxheader
