--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -48,7 +48,7 @@
                 %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown"}
                   = image_tag current_user.profile_pic, style: "width: 17px; height: 17px; vertical-align: middle;"
                   %span{ style: "vertical-align: middle;" }= current_user.name 
-                  %span.caret{ style: " border-top-color: #c7ced6; border-bottom-color: #c7ced6; color: #c7ced6; margin-top:7px;"}
+                  %span.caret
                 %ul.dropdown-menu{ role: "button", style: "padding: 0; top:42px; right:-138px; min-width: 312px; min-height: 135px;" }
                   %div
                     %div.nub{ style: "left:150px;" }
