--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -41,6 +41,21 @@
   %div.row
     %div.span5
       %div.leftbox
+        %div.leftboxheader
+          Completed Tasks
+          %div.btn-group{ style: "font-size:7px;" }
+            %button.btn
+              Challenge
+            %button.btn
+              Last 7 days
+            %button.btn
+              Last month
+        %div.leftboxfooter{style:"padding-top: 6px"}
+          %div
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/check.png" }
+            %span Challenge name
+            %span Task description
+      %div.leftbox
         %div.leftboxheader About
         %div.leftboxfooter{style:"padding-top: 6px"}
           %span= @user.description || "Person of mystery is a mystery..."
