--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -43,18 +43,19 @@
       %div.leftbox
         %div.leftboxheader
           Completed Tasks
-          %div.btn-group{ style: "font-size:7px;" }
-            %button.btn
-              Challenge
-            %button.btn
-              Last 7 days
-            %button.btn
-              Last month
+          %a{href:"#"}
+            %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/filter4.png", style: "float:right; height:17px; opacity:.6;" }
         %div.leftboxfooter{style:"padding-top: 6px"}
-          %div
+          %div.singletaskentry
             %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/check.png" }
-            %span Challenge name
-            %span Task description
+            %div
+              %span{style: "font-weight:bold; display:inline-block;"} Challenge name
+              %span{style: "display:block;"} Task description
+          %div.singletaskentry
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/check_circle.png" }
+            %div
+              %span{style: "font-weight:bold; display:inline-block;"} Challenge name
+              %span{style: "display:block;"} Task description
       %div.leftbox
         %div.leftboxheader About
         %div.leftboxfooter{style:"padding-top: 6px"}
